# rmlst_api

./: .gitignore  README.md  pyproject.toml  rmlst.py
.github/workflows/: publish-to-pypi.yml
src/rmlst_api/: rmlst.py
tests/: sample_genome.fasta  test_rmlst.py
