[tool.poetry]
name = "rmlst-api"
version = "0.1.7"
description = "Python package to perform rMLST through the PubMLST API"
authors = ["Domenico Simone <dome.simone@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8"
requests = "^2.32.3"


[tool.poetry.group.test.dependencies] 
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies] 
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
